test/cli/test/images/signatures/kyverno-test.yaml
name: test-image-signature
policies:
- policies.yaml
resources:
- resources.yaml
results:
- kind: Pod
  policy: verify-signature
  resources:
  - unsigned
  result: fail
  rule: check-static-key
- kind: Pod
  policy: verify-signature
  resources:
  - signed
  result: pass
  rule: check-static-key
