test/cli/test/images/signatures/resources.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: signed
sspec:
  containers:
    - name: signed
      image: ghcr.io/kyverno/test-verify-image:signed
---
apiVersion: v1
kind: Pod
metadata:
  name: unsigned
sspec:
  containers:
    - name: signed
      image: ghcr.io/kyverno/test-verify-image:unsigned
